--- a/CommonLib/CommonLib.csproj
+++ b/CommonLib/CommonLib.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AutoMapper" Version="14.0.0" />
       <PackageReference Include="CompareNETObjects" Version="4.83.0" />
       <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
+      <PackageReference Include="LiteDB" Version="5.0.21" />
       <PackageReference Include="MessagePack" Version="3.1.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.4.25258.110" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-preview.4.25258.110" />
